clusters/dev/istio/edge/https-redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: istio-ingress
spec:
  hostnames:
    - task-api-istio.lhrm-lab.com
    - kiali.lhrm-lab.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: task-api-istio-gateway
      namespace: istio-ingress
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
