clusters/dev/istio/edge/kiali-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: istio-system
spec:
  hostnames:
    - kiali.lhrm-lab.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: task-api-istio-gateway
      namespace: istio-ingress
      sectionName: http
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kiali
          port: 20001
          weight: 1
