clusters/dev/istio/edge/task-api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: task-api-istio
  namespace: argo-task-api-istio
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: task-api-istio-gateway
      namespace: istio-ingress
      sectionName: http
  rules:
    - matches:
        - path:
            type: Exact
            value: /version
        - path:
            type: Exact
            value: /healthz
        - path:
            type: Exact
            value: /readyz
      backendRefs:
        - group: ""
          kind: Service
          name: argo-task-api-istio
          port: 8000
          weight: 1
